<resources>
    <string name="app_name">WIW</string>
    <string name="wiw">WIW</string>
    <string name="choose_your_now_travel">Mode of transport</string>
    <string name="history">History</string>
    <string name="where_i_was_show_where_you_were_and_the_information_associated_with_it">Where I Was - it shows where you were, and the information associated with it</string>
    <string name="turist">Walking</string>
    <string name="journy">Means of transport</string>
    <string name="start_travel">Start travel</string>
    <string name="by_air">By air</string>
    <string name="how_often_should_i_store_information_the_more_often_i_store_the_more_data_to_take_up">How often should I store information? The more often I store, the more space is taken up in storage</string>
    <string name="save">Saved</string>
    <string name="_1_minute">1 second</string>
    <string name="_2_minutes">2 seconds</string>
    <string name="_5_minutes">5 seconds</string>
    <string name="_10_minutes">10 seconds</string>
    <string name="_30_minutes">30 seconds</string>
    <string name="write_how_much_refresh_time">How often do you want to store your data</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="actually_settings">Custom Settings</string>
    <string name="when_you_move_away">When you move away</string>
    <string name="height">Height</string>
    <string name="where_i_am">Where I am</string>
    <string name="long_way">Travel distance</string>
    <string name="gps">GPS Lati</string>
    <string name="speed">Speed</string>
    <string name="rotate">Inclination</string>
    <string name="how_long_time_travel">Travel Time</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="temp">Temp</string>
    <string name="textview">TextView</string>
    <string name="data">Current Data</string>
    <string name="gps_long">GPS Long</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="linearacceleration">LinearAcceleration</string>
    <string name="orientation">Orientation</string>
    <string name="rotationvector">RotationVector</string>
    <string name="title_activity_maps">Map</string>
    <string name="you_are_here">You are here</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="opening">Opening</string>
    <string name="travelWith">Mode of transport</string>
    <string name="refreshTime">Refresh Frequency</string>
    <string name="refreshOption">Refresh option</string>
    <string name="numberOfCheckPoint">Points</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="renameName">Rename</string>
    <string name="deleteQuestion">Do you want to delete this way?</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="deleted">Deleted</string>
    <string name="Accuracy">Accuracy</string>
    <string name="AccuracyGPS">Accuracy GPS</string>
    <string name="showinmap">Show in map</string>
    <string name="title_activity_maps3_d">Maps3D</string>
    <string name="title_activity_maps2">Map</string>
    <string name="createFileError">Error. The file could not be completed.</string>
    <string name="createFile">"The file was created in folder:"</string>
    <string name="download_file">Download the preview of the route</string>
    <string name="download_animation">Download Animation</string>
    <string name="gps_connect">I don\'t have a GPS connection</string>
    <string name="sql_insert">Failed to insert data into SQL</string>
    <string name="sql_wrong_data">I found incorrect data, application error</string>
    <string name="bad_settings">Wrong values!</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="minute">Seconde</string>
    <string name="minutes">Seconds</string>
    <string name="distance">Moved position</string>
    <string name="deleted_all">Deleted all points and ways.</string>
    <string name="preferences">Settings</string>
    <string name="minutesSk">Seconds</string>
</resources>