<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualDataSenzor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="401dp"
        android:layout_height="403dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/data"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="?android:attr/scrollbarSize"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/gps" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gps_long"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/long_way" />

                <TextView
                    android:id="@+id/TextInclination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/rotate"
                    android:visibility="gone"
                    tools:layout_conversion_absoluteHeight="14dp"
                    tools:layout_conversion_absoluteWidth="41dp"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="79dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/how_long_time_travel" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accelerometer" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gravity" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gyroscope" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/linearacceleration" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/orientation" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rotationvector" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Accuracy" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/AccuracyGPS" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TempDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempGpsLong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="14dp"
                    tools:layout_conversion_absoluteWidth="36dp"
                    tools:layout_editor_absoluteX="525dp"
                    tools:layout_editor_absoluteY="79dp" />

                <TextView
                    android:id="@+id/TempDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/temp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TempInclination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/textview"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/TempTravelTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="?android:attr/scrollbarSize"
                    android:paddingBottom="?android:attr/scrollbarSize"
                    android:text="@string/textview"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Acceleration13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/Gravity15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/Gyroscope17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/LinearAccele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/Orientation24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/RotationVector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />

                <TextView
                    android:id="@+id/Accuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp" />

                <TextView
                    android:id="@+id/AccuracyGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/WhereIAmADS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/where_i_am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CancelADS" />

    <Button
        android:id="@+id/FinishADS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhereIAmADS" />

    <Button
        android:id="@+id/CancelADS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>